--- a/portfolio.html
+++ b/portfolio.html
@@ -335,6 +335,24 @@
               </li>
             </ul>
           </div>
+
+          <form action="" class="footer-form">
+            <h2 class="footer-title">Подпишитесь на рассылку</h2>
+            <div class="footer-form-list">
+              <input
+                type="email"
+                name="user-name"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+              <button type="submit" class="footer-button">
+                Подписаться
+                <svg class="icon-footer-button" width="24px" height="24px">
+                  <use href="./images/symbol.svg#icon-telegram"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
