--- a/index.html
+++ b/index.html
@@ -79,13 +79,28 @@
               </svg>
             </button>
             <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-            <form action="#">
+            <form action="#" class="modal-form">
               <label for="name" class="modal-form-field">Имя</label>
+              <div class="modal-input-wrap">
             <input type="text" name="user-name" class="modal-input" id="name">
+            <svg class="icon-modal-input" width="18" height="18">
+              <use href="./images/symbol.svg#icon-person"></use>
+            </svg>
+               </div>
             <label for="tel" class="modal-form-field">Телефон</label>
+            <div class="modal-input-wrap">
             <input type="tel" name="user-tel" class="modal-input" id="tel">
+            <svg class="icon-modal-input" width="18" height="18">
+              <use href="./images/symbol.svg#icon-phone"></use>
+            </svg>
+            </div>
             <label for="mail" class="modal-form-field">Почта</label>
+            <div class="modal-input-wrap">
             <input type="email" name="user-mail" class="modal-input" id="mail">
+            <svg class="icon-modal-input" width="18" height="18">
+              <use href="./images/symbol.svg#icon-email"></use>
+            </svg>
+            </div>
             <label for="text"  class="modal-form-field">Комментарий</label>
             <textarea name="user-text" id="text" class="modal-text" placeholder="Введите текст"></textarea>
             <label class="contract-text">
