--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <h2 class="footer-title">Подпишитесь на рассылку</h2>
         <form action="" class="footer-form">
             <input type="email" name="user-name" placeholder="E-mail" class="footer-input">
-          <button type="submit" class="primary-button footer-button"> Подписаться 
+          <button type="submit" class="primary-button primary-button-flex"> Подписаться 
             <svg class="icon-footer-button" width="24px" height="24px">
               <use href="./images/symbol.svg#icon-telegram"></use>
             </svg>
@@ -492,7 +492,7 @@
             </button>
             <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
             <form action="#" class="form">
-               <div class="form-fild-input">
+               <div class="form-field-input">
               <label for="name" class="label">Имя</label>
               <div class="input-wrap">
             <input type="text" name="user-name" class="input" id="name">
@@ -501,7 +501,7 @@
             </svg>
                </div>
               </div>
-              <div  class="form-fild-input">
+              <div  class="form-field-input">
             <label for="tel" class="label">Телефон</label>
             <div class="input-wrap">
             <input type="tel" name="user-tel" class="input" id="tel">
@@ -510,7 +510,7 @@
             </svg>
             </div>
           </div>
-          <div  class="form-fild-input">
+          <div  class="form-field-input">
             <label for="mail" class="label">Почта</label>
             <div class="input-wrap">
             <input type="email" name="user-mail" class="input" id="mail">
@@ -519,11 +519,11 @@
             </svg>
             </div>
           </div>
-          <div  class="form-fild-textarea">
+          <div  class="form-field-textarea">
             <label for="text"  class="label">Комментарий</label>
             <textarea name="user-text" id="text" class="textarea-text" placeholder="Введите текст"></textarea>
             </div>
-            <div  class="form-fild-checkbox">
+            <div  class="form-field-checkbox">
             <label class="contract-text">
               <input type="checkbox" name="contract" class="checkbox visually-hidden" />
                 <span class="check-item"><svg class="icon-check" width="16" height="15">
@@ -532,7 +532,7 @@
            </label>
            <a href="" class="contract-link">Условия договора</a>
            </div>
-           <button type="submit" class="primary-button bth-submit">Отправить</button>
+           <button type="submit" class="primary-button">Отправить</button>
           </form>
           </div>
         </div>
