--- a/portfolio.html
+++ b/portfolio.html
@@ -336,23 +336,23 @@
             </ul>
           </div>
 
-          <form action="" class="footer-form">
+          <div class="footer-form-list">
             <h2 class="footer-title">Подпишитесь на рассылку</h2>
-            <div class="footer-form-list">
+            <form action="" class="footer-form">
               <input
                 type="email"
                 name="user-name"
                 placeholder="E-mail"
                 class="footer-input"
               />
-              <button type="submit" class="footer-button">
+              <button type="submit" class="primary-button primary-button-flex">
                 Подписаться
                 <svg class="icon-footer-button" width="24px" height="24px">
                   <use href="./images/symbol.svg#icon-telegram"></use>
                 </svg>
               </button>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
